--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^8.7.2",
     "next": "14.2.16",
     "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.0",
     "react": "^18",
     "react-dom": "^18",
     "svix": "^1.37.0"
